# wav-summarizer

./: .env.example  README.md  adk_client.py  main.py  pyproject.toml  settings.py  sheets_client.py  speech_client.py
scripts/: build_function_zip.sh  requirements.txt
terraform/: main.tf  outputs.tf  provider.tf  variables.tf
